--- a/Agflow.html
+++ b/Agflow.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AgriFlow Empire • Universal Asset Exchange</title>
+  <title>AgFlow Empire • Universal Asset Exchange</title>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -541,7 +541,7 @@
     function generateMagicLink(itemName) {
         // Simulate a hash link
         const hash = btoa(itemName + Date.now()).substring(0, 12);
-        const link = `https://chandra.com/vault/view?id=${hash}`;
+        const link = `https://chandracloud/vault/view?id=${hash}`;
         prompt("Copy this Secret Link and share it with investors/buyers:", link);
     }
 
@@ -661,3 +661,4 @@
   </script>
 </body>
 </html>
+
