--- a/HR_Module.html
+++ b/HR_Module.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chandra.com • Enterprise Operations Hub</title>
+  <title>Chandracloud •Enterprise Operations Hub</title>
   
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -200,7 +200,7 @@
           </div>
           <div class="kpi-card">
             <div class="kpi-label">Monthly Revenue</div>
-            <div class="kpi-value">$42.5k</div>
+            <div class="kpi-value">$72.5k</div>
             <div class="kpi-trend trend-up"><i class="fas fa-check"></i> Target Reached</div>
           </div>
         </div>
@@ -578,4 +578,5 @@
     init();
   </script>
 </body>
+
 </html>
