--- a/deploy-dashboard.html
+++ b/deploy-dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chandra Cloud • Deploy Console</title>
+    <title>Chandracloud • Deploy Console</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -71,7 +71,7 @@
 
     <div class="main-wrapper">
         <div class="header">
-            <div class="logo"><i class="fas fa-cloud"></i> CHANDRA CLOUD</div>
+            <div class="logo"><i class="fas fa-cloud"></i> Chandracloud </div>
             <p style="color:#666; font-size:0.9rem; margin-top:5px;">Universal GCP Deployment Gateway</p>
         </div>
 
@@ -224,4 +224,5 @@
     </script>
 </body>
 </html>
+
 
